objectif fonction is add

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -8,3 +8,6 @@ org.gradle.configureondemand=true
 org.gradle.daemon=true
 org.gradle.caching=true
 android.suppressUnsupportedCompileSdk=true
+
+# Fix for GPU rendering issues on some devices
+android.enableR8.fullMode=false
