--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,9 @@ dependencies:
   # Synchronization
   synchronized: ^3.1.0
 
+  # URL launcher pour emails et liens
+  url_launcher: ^6.2.5
+
 
 
 dev_dependencies:
